fix(#creatormark): wrong align

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
     text-decoration: none;
     color: wheat;
     float: right;
-    bottom: 1.1cm;
+    bottom: 1.2cm;
     right: 10px;
     font-size: 20px
 }
